--- a/src/App.css
+++ b/src/App.css
@@ -7,8 +7,50 @@
   padding: 0;
   box-sizing: border-box;
   color: black;
-  background-color: #FFFFFF;
   list-style: none;
   text-decoration: none;
 }
 
+section{
+  background-color: #ffffff;
+}
+
+article{
+  background-color: #E1F3E5;
+}
+
+h1{
+  font-size: 5rem;
+  font-weight: 700;
+  line-height: 120%;
+  padding: 0;
+  background-color: none;
+}
+
+h2{
+  font-size: 3rem;
+  font-weight: 700;
+  line-height: 120%;
+  padding: 0;
+  background-color: none;
+}
+
+h3{
+  font-size: 2rem;
+  font-weight: 600;
+  line-height: 120%;
+  padding: 0;
+  background-color: none;
+}
+
+button{
+  padding: 0.5rem 1.5rem;
+  background-color:#00DB5E ;
+  border-radius: 5px;
+
+  cursor: pointer;
+  font-size: 1rem;
+  font-weight: 400;
+
+  /* border: #000000 solid 1px; */
+}
