--- a/src/components/navbar/Navbar.css
+++ b/src/components/navbar/Navbar.css
@@ -2,6 +2,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    background-color: #ffffff;
 
     padding: 1rem 2rem;
 }
@@ -9,6 +10,7 @@
 .logo {
     height: 5rem;
     width: 5rem;
+    margin-top: 1rem;
 }
 
 .nav-links-container{
@@ -55,6 +57,8 @@
     color: #004437;
 }
 
+
+
 @media screen and (max-width: 768px){
     .nav-links-container{
         display: none;
@@ -92,24 +96,25 @@
         position: absolute;
         right: 2rem;
         top: 5rem;
-        background-color: #00DB5E;
-        border: solid 1px #004437;
+        background-color: #004437;
+        
+        border: solid 2px #00DB5E;
         border-radius: 10px;
         padding: 1rem 1rem;
         backdrop-filter: blur(50px);
     }
 
     .hamburger-menu-links .link {
-        margin: 1rem 1rem;
+        margin: 0.5rem 1rem;
         padding: 0;
-        background-color: #00DB5E;
+        background-color: none;
         backdrop-filter: blur(50px);
         
     }
 
     .hamburger-menu-links .link > p{
-       background-color: #00DB5E;
-       color: #ffffff;
+       background-color: #004437;
+       color: #E1F3E5;
     }
 
 
