--- a/src/App.css
+++ b/src/App.css
@@ -54,3 +54,35 @@ button{
 
   /* border: #000000 solid 1px; */
 }
+
+
+
+
+@media screen and (max-width: 768px){
+
+  h2{
+      font-size: 2.5rem;
+      font-weight: 700;
+      
+    }
+}
+
+
+@media screen and (max-width: 450px){
+ 
+
+  h2{
+      font-size: 2rem;
+      font-weight: 600;
+    
+  }
+
+  h3{
+      font-size: 1.5rem;
+      font-weight: 500;
+     
+  }
+
+    
+   
+}
