--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -30,10 +30,10 @@
 /* margin: 2rem ; */
 }
 
-.footer .social-media{
+/* .footer .social-media{
      
    
-}
+} */
 
 .social-media .social-links{
     display: flex;
